fix alignment

--- a/app/assets/stylesheets/_extensions.scss
+++ b/app/assets/stylesheets/_extensions.scss
@@ -40,5 +40,9 @@
 }
 
 .govuk-feed {
-
+  display: flex;
+  align-items: flex-end;
+  .govuk-link {
+    margin-left: 5px;
+  }
 }
